hello/base/deploy-test-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: hello-world
          image: containerregistrylsetest.azurecr.io/hello-world:0.1
          ports:
            - containerPort: 8080
