hello/base/ingress-test-hello.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: argocd-ingress  # 새로운 IngressClass 이름
  rules:
    - host: local-helloworld.com  # 사용할 도메인 이름
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloworld-service
                port:
                  number: 80
